--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -422,7 +422,7 @@ image::GenerateScheduleClassDiagram.png[align="center"]
 Below is an example usage scenario and how the `display_schedule` command behaves at each step.
 
 ._Program flow of the Generate Schedule Feature_
-image::GenerateScheduleFlowChart.png[align="center"]
+image::GenerateScheduleFlowChart.png[align="center", width = "300"]
 
 **Step 1**. The user launches the application for the first time.
 
