--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -504,12 +504,82 @@ Alternative 2 also helps prevent user confusion, as the list that is displayed i
 
 === Finance
 ==== Implementation
-_WIP_
+
+
+The `Finance` Feature is implemented to allow users to get the detail of all employees in a easy manner.
+The tab shows three finance related details which are 'Total Salary' 'Pending To Pay' 'Salary Paid'. Two commands were
+implemented which are 'pay' and 'undo_pay', allow user to make the payment or undo the payment for the employee.
+The `Finance' take in three arguments:
+
+1.  `employeeIndex` - index of event in the displayed employee list
+2. `employeePay` - the hourly salary for the specific employee
+3. `employeeSalaryPaid` - the total amount of salary has paid to th specific employee
+
+Additionally, the `Finance` uses the following operations:
+
+* `EmployeeEventProcessor#findEmployeeTotalWorkedHours()` -- Find the total working hours for the specific employee.
+* `Employee#addSalaryPaid` -- Update the 'employeeSalaryPaid' for the specific employee.
+* `finance#updateCards()` -- Update the finance detail for all employees.
+
+Given below is an example usage scenario and how the finance feature behaves at each step.
+
+._Program flow of the Finance Feature_
+image::AutoAllocateFlowChart.png[align="center", width = "300"]
+
+**Step 1**. The user executes `pay 1 s/100` (undo_pay 1 s/100) with the intention to pay 100 dollar to
+the first employee in the employee list
+**Step 2**. The command checks if `eventIndex` is valid.
+
+**Step 3**. The command calls method of 'Employee#findEmployeeTotalWorkedHours` to get the
+total working hours for the specific employee and times `employeePay` to get the total salary.
+
+
+**Step 4**. The command calls method of 'Employee#getEmployeeSalaryPaid()` to get the
+`employeeSalaryPaid` for this specific employee from the storage .
+
+**Step 5**. The command checks if the value of payment/undo-payment is valid.
+[NOTE]
+The value of the payment/undo-payment should be positive integer. The value of the payment should be less
+than the value of 'Pending To Pay'. The value of the undo-payment should be less than the value of 'Salary Paid'.
+
+**Step 6**. The command calls `Employee#addSalaryPaid` to update the `employeeSalaryPaid` for this specific employee.
+[NOTE]
+For storage purposes, only the `Employee#employeeSalaryPaid` is saved.
+
+**Step 7**. The command calls `Finance#updatecard()` to update the `Pending To Pay` of
+the employee card. The UI will update accordingly.
+
+**Step 7**. Done.
+
+
+The following sequence diagram shows how the auto allocation works:
+
+._Sequence Diagram of the AutoAllocate Command_
+image::AutoAllocateSequenceDiagram.png[]
+
+NOTE: The lifeline for `AutoAllocateCommand` should end at the destroy marker (X) but due to a limitation of
+PlantUML, the lifeline reaches the end of diagram.
+
 
 ==== Design Considerations
-_WIP_
 
-=== Logging
+===== Aspect: Storage of employees associated with event after successful command
+
+[width="100%", options="header" cols="3, 4, 4"]
+|========================================================================================
+|Feature      |Alternative 1 | Alternative 2
+|Storage of employees fields after pay/undo-pay command
+|Saves only the `Employee#employeeSalaryPaid` and `Employee#Pay` in storage.
+
+*Pros*: Easy to implement. Will use less memory.
+
+*Cons*: Future accesses the 'Pending To Pay' and 'Total Salary' require more time.
+
+*I decided to proceed with this option* because it creates less fields of employees, the 'Pending To Pay'
+and 'Total Salary' is calculated on real time. User do not need to type so many fields when they add the employees.
+
+|========================================================================================
+// end::Cris[]
 
 We are using `java.util.logging` package for logging. The `LogsCenter` class is used to manage the logging levels and logging destinations.
 
