--- a/docs/team/woon17.adoc
+++ b/docs/team/woon17.adoc
@@ -1,4 +1,4 @@
-= <NAME> - Project Portfolio
+= <WEN SHUFA> - Project Portfolio
 :site-section: AboutUs
 :imagesDir: ../images
 :stylesDir: ../stylesheets
